@@ -4,7 +4,7 @@
 # Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsControl,v 1.13 2009/09/16 18:51:16 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsControl,v 1.14 2009/09/16 22:54:36 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -43,5 +43,6 @@ source ${SELF}/ops/busackergowen.test; # Minimum-Cost Maximum-Flow by Busacker-G
 source ${SELF}/ops/edmondskarp.test  ; # Maximum-Flow by Edmonds-Karp
 source ${SELF}/ops/floydwarshall.test; # Distances by Floyd-Warshall
 source ${SELF}/ops/johnsons.test     ; # Distances by Johnsons
+source ${SELF}/ops/maxcut.test       ; # Maximum Cut, 2-approximation algorithm
 
 # -------------------------------------------------------------------------
